[tool.poetry]
name = "twvideo-dl"
version = "0.0.1"
description = "A Simple CLI for downloading Videos from X, formaly Twitter"
authors = ["eggplants <w10776e8w@yahoo.co.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry.scripts]
twvideo-dl = "twvideo_dl.main:main"
