[tool.poetry]
name = "twvideo-dl"
version = "0.0.2"
description = "A Simple CLI for downloading Videos from X, formerly Twitter"
authors = ["eggplants <w10776e8w@yahoo.co.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
nested-lookup = "^0.2.25"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.4"
freezegun = "^1.4.0"
black = "^23.12.1"
taskipy = "^1.12.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry.scripts]
twvideo-dl = "twvideo_dl.main:main"

[tool.taskipy.tasks]
test = "pytest --cov=twvideo_dl --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
